--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,11 +3,12 @@
 /DuelingButtons.class
 /MyFirstSwingGUI.class
 /PhotoQuiz.class
-/SoundEffects.class
+/Recipes.html
 /arnold.jpeg
 /cymbal.jpg
 /cymbal.wav
 /drum.wav
+/extra/
 /homer-woohoo.wav
 /jack.jpeg
 /jackInTheBox.png
@@ -16,4 +17,6 @@
 /morgan.jpeg
 /sawing-wood-daniel_simon.wav
 /snare.jpg
-/extra/
+/drum.jpg
+/331589__j-zealous__kick-j-zealous-hard-club (2).aiff
+/371192__karolist__acoustic-kick.wav
