--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,5 @@
+/331589__j-zealous__kick-j-zealous-hard-club (2).aiff
+/371192__karolist__acoustic-kick.wav
 /BodyPartQuiz.class
 /DrumKit.class
 /DuelingButtons.class
@@ -7,6 +9,7 @@
 /arnold.jpeg
 /cymbal.jpg
 /cymbal.wav
+/drum.jpg
 /drum.wav
 /extra/
 /homer-woohoo.wav
@@ -17,6 +20,6 @@
 /morgan.jpeg
 /sawing-wood-daniel_simon.wav
 /snare.jpg
-/drum.jpg
-/331589__j-zealous__kick-j-zealous-hard-club (2).aiff
-/371192__karolist__acoustic-kick.wav
+/stufffff/
+/ForCookies.class
+/JackInABox.class
