--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,6 +3,8 @@
 /BodyPartQuiz.class
 /DrumKit.class
 /DuelingButtons.class
+/ForCookies.class
+/JackInABox.class
 /MyFirstSwingGUI.class
 /PhotoQuiz.class
 /Recipes.html
@@ -20,6 +22,11 @@
 /morgan.jpeg
 /sawing-wood-daniel_simon.wav
 /snare.jpg
-/stufffff/
-/ForCookies.class
-/JackInABox.class
+/JIAB.class
+/shiny-objects 1.wav
+/sound.class
+/Justin Timberlake - Rock Your Body.mp3
+/shiny-objects 2.wav
+/homer-woohoo2.wav
+/cymbal2.wav
+/sitDown.class
