--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -4,29 +4,29 @@
 /DrumKit.class
 /DuelingButtons.class
 /ForCookies.class
-/JackInABox.class
+/JIAB.class
+/Justin Timberlake - Rock Your Body.mp3
 /MyFirstSwingGUI.class
 /PhotoQuiz.class
 /Recipes.html
 /arnold.jpeg
 /cymbal.jpg
 /cymbal.wav
+/cymbal2.wav
 /drum.jpg
 /drum.wav
 /extra/
 /homer-woohoo.wav
+/homer-woohoo2.wav
 /jack.jpeg
 /jackInTheBox.png
 /java.png
 /leonardo.jpeg
 /morgan.jpeg
 /sawing-wood-daniel_simon.wav
-/snare.jpg
-/JIAB.class
 /shiny-objects 1.wav
-/sound.class
-/Justin Timberlake - Rock Your Body.mp3
 /shiny-objects 2.wav
-/homer-woohoo2.wav
-/cymbal2.wav
 /sitDown.class
+/snare.jpg
+/sound.class
+/CuTV.class
